[Content Extensions] Fail to load old content extension files https://bugs.webkit.org/show_bug.cgi?id=145027

Reviewed by Eric Carlson.

Source/WebCore:

* contentextensions/DFABytecode.h:

Source/WebKit2:

* UIProcess/API/APIUserContentExtensionStore.cpp:
(API::openAndMapContentExtension):
* UIProcess/API/APIUserContentExtensionStore.h:



Canonical link: https://commits.webkit.org/163101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184413 268f45cc-cd09-0410-ab3c-d52691b4dbfc