Source/WebKit2/UIProcess/API/APIUserContentExtensionStore.h
@@ -44,9 +44,14 @@ class UserContentExtensionStore final : public ObjectImpl<Object::Type::UserCont
 public:
     enum class Error {
         LookupFailed = 1,
+        VersionMismatch,
         CompileFailed,
         RemoveFailed
     };
+    
+    // This should be incremented every time a functional change is made to the bytecode, file format, etc.
+    // to prevent crashing while loading old data.
+    const static uint32_t CurrentContentExtensionFileVersion = 2;
 
     static UserContentExtensionStore& defaultStore();
 
